# sagtask

./: .gitignore  .sag_task_state.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  __init__.py  design.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: architecture-mermaid.md  architecture.txt  demo-real.cast  demo-real.sh  demo-script.sh  demo-subagent.sh  demo.cast  design.md  release-packaging.md  review-superpowers-phase1.md  review-superpowers-phase2.md  review-superpowers-phase3.md  review-superpowers-phase4.md  review.md  superpowers-integration-proposal.md  testing-strategy.md
docs/superpowers/plans/: 2026-05-06-p0-p1-security-and-testing.md  2026-05-07-release-packaging.md  2026-05-11-modularize-init-py.md  (+6 more)
providers/: task_tools.py  tools.py
scripts/: build-release.sh  bump-version.sh
src/sagtask/: SKILL.md  __init__.py  _utils.py  hooks.py  plugin.py  plugin.yaml  rules.py  schemas.py  updater.py
tests/: conftest.py  test_advance_completion.py  test_advance_verification.py  test_brainstorm.py  test_commit_branch_list.py  test_context_injection.py  test_debug.py  test_dispatch.py  test_exception_handling.py  test_get_current_step.py  test_github_owner.py  test_hermes_integration.py  test_layered_injection.py  test_lifecycle.py  test_methodology_recommend.py  test_metrics.py  test_misc_coverage.py  test_plan.py  test_plan_update.py  test_plugin_methods.py  test_register.py  test_relate.py  test_review.py  test_rules.py  test_schema_versioning.py  test_subprocess_timeout.py  test_tdd_state.py  test_validation.py  test_verify.py
(+13 files in other folders)
