[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagtask-hermes"
version = "2.0.0"
description = "Long-running task management plugin for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "ethanchen669"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/ethanchen669/sagtask"

[project.entry-points."hermes_agent.plugins"]
sagtask = "sagtask:register"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/sagtask"]

[tool.hatch.build.targets.sdist]
include = ["src/sagtask/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring hermes CLI",
]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/sagtask"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
